--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
         </activity>
         <activity android:name=".view.RecipeActivity">
         </activity>
-        <activity android:name=".RecipeDetailActivity">
+        <activity android:name=".view.RecipeDetailActivity">
+        </activity>
+        <activity android:name=".view.IngredientListActivity">
         </activity>
     </application>
 
